--- a/packages/network-debugger/package.json
+++ b/packages/network-debugger/package.json
@@ -36,7 +36,9 @@
     "vitest": "^1.5.0"
   },
   "dependencies": {
+    "chardet": "^2.0.0",
     "chrome-remote-interface": "^0.33.0",
+    "iconv-lite": "^0.6.3",
     "open": "^8.4.2",
     "ws": "^8.17.0"
   }
