--- a/apps/koa/package.json
+++ b/apps/koa/package.json
@@ -6,32 +6,31 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon --exec NODE_OPTIONS=--inspect-brk NODE_ENV=development ts-node --files ./src/index.ts",
-    "dev": "cross-env NETWORK_DEBUGGER=true node --watch ./src/index.js",
+    "dev":"node --watch ./src/index.js",
     "build": "vite build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/koa": "^2.15.0",
-    "@types/koa-router": "^7.4.8",
-    "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
-    "cross-env": "^7.0.3",
-    "node-network-devtools": "workspace:*",
+    "@types/node": "^20.11.0",
     "nodemon": "^3.1.0",
+    "@types/koa": "^2.15.0",
+    "@types/koa-router": "^7.4.8",
+    "node-network-devtools": "workspace:*",
     "tslib": "^2.6.2",
-    "vite": "^5.2.10",
     "vite-plugin-dts": "^3.8.3",
+    "vite": "^5.2.10",
     "vitest": "^1.5.0"
   },
   "dependencies": {
-    "axios": "^1.6.8",
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
     "koa-router": "^12.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "axios": "^1.6.8"
   }
 }
