--- a/apps/koa/package.json
+++ b/apps/koa/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon --exec NODE_OPTIONS=--inspect-brk NODE_ENV=development ts-node --files ./src/index.ts",
     "dev": "cross-env NETWORK_DEBUG_MODE=true node --watch ./src/index.js",
-    "start": "cross-env NODE_ENV=production node --watch ./src/index.js",
+    "start": "cross-env NODE_ENV=production node --inspect  --watch ./src/index.js",
     "build": "vite build"
   },
   "keywords": [],
