--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
+      - run: cd packages/node-network-devtools
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
