--- a/apps/koa-esm/package.json
+++ b/apps/koa-esm/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "koa",
+  "name": "koa-esm",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon --exec NODE_OPTIONS=--inspect-brk NODE_ENV=development ts-node --files ./src/index.ts",
