--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,19 +1,18 @@
 {
   "name": "web",
-  "version": "0.0.1",
-  "description": "node network devtools offical web",
-  "license": "MIT",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "build": "vuepress build docs",
-    "clean-dev": "vuepress dev docs --clean-cache",
-    "dev": "vuepress dev docs",
-    "update-package": "pnpm dlx vp-update"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vitepress dev --port=5800",
+    "build": "vitepress build",
+    "docs:preview": "vitepress preview"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@vuepress/bundler-vite": "^2.0.0-rc.7",
-    "@vuepress/theme-default": "^2.0.0-rc.11",
-    "vue": "^3.4.0",
-    "vuepress": "^2.0.0-rc.7"
+    "vitepress": "^1.2.3"
   }
 }
