--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -44,4 +44,4 @@ jobs:
         with:
           # 这是文档部署到的分支名称
           branch: gh-pages
-          folder: apps/web/docs/.vuepress/dist
+          folder: apps/web/docs/.vitepress/dist
