--- a/packages/network-debugger/package.json
+++ b/packages/network-debugger/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
+  "types": "./dist/src/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
@@ -22,13 +23,14 @@
     "dev": "vite build --watch"
   },
   "keywords": [
-    "network",
-    "node",
     "nodejs",
+    "javascript",
+    "chrome",
+    "node",
+    "network",
     "debug",
     "debugger",
     "devtools",
-    "chrome",
     "chrome devtools"
   ],
   "files": [
