--- a/packages/network-debugger/package.json
+++ b/packages/network-debugger/package.json
@@ -18,7 +18,7 @@
     }
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "build": "vite build",
     "dev": "vite build --watch"
   },
@@ -47,7 +47,7 @@
     "tslib": "2.6.2",
     "vite": "^5.2.10",
     "vite-plugin-dts": "^3.8.3",
-    "vitest": "^1.5.0"
+    "vitest": "^2.0.3"
   },
   "dependencies": {
     "iconv-lite": "^0.6.3",
