--- a/packages/network-debugger/package.json
+++ b/packages/network-debugger/package.json
@@ -50,6 +50,7 @@
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
+    "envinfo": "^7.14.0",
     "tslib": "2.6.2",
     "vite": "^5.2.10",
     "vite-plugin-dts": "^3.8.3",
