--- a/apps/koa-esm/package.json
+++ b/apps/koa-esm/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "cross-env": "^7.0.3",
+    "got": "^14.4.1",
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
     "koa-router": "^12.0.1",
