--- a/apps/koa/package.json
+++ b/apps/koa/package.json
@@ -32,7 +32,9 @@
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
     "koa-router": "^12.0.1",
+    "ofetch": "^1.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "ws": "^8.17.0"
   }
 }
