--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.18",
     "@vuepress/theme-default": "2.0.0-rc.65",
+    "sass-embedded": "^1.82.0",
     "vue": "^3.4.0",
     "vuepress": "2.0.0-rc.18"
   },
