--- a/.github/workflows/gemini-invoke.yml
+++ b/.github/workflows/gemini-invoke.yml
@@ -20,7 +20,7 @@ jobs:
   invoke:
     runs-on: "ubuntu-latest"
     permissions:
-      contents: "read"
+      contents: "write"
       id-token: "write"
       issues: "write"
       pull-requests: "write"
