--- a/.github/workflows/gemini-dispatch.yml
+++ b/.github/workflows/gemini-dispatch.yml
@@ -60,7 +60,7 @@ jobs:
       )
     runs-on: "ubuntu-latest"
     permissions:
-      contents: "read"
+      contents: "write"
       issues: "write"
       pull-requests: "write"
     outputs:
@@ -129,7 +129,7 @@ jobs:
       ${{ needs.dispatch.outputs.command == 'review' }}
     uses: "./.github/workflows/gemini-review.yml"
     permissions:
-      contents: "read"
+      contents: "write"
       id-token: "write"
       issues: "write"
       pull-requests: "write"
@@ -157,7 +157,7 @@ jobs:
       ${{ needs.dispatch.outputs.command == 'invoke' }}
     uses: "./.github/workflows/gemini-invoke.yml"
     permissions:
-      contents: "read"
+      contents: "write"
       id-token: "write"
       issues: "write"
       pull-requests: "write"
@@ -175,7 +175,7 @@ jobs:
       ${{ always() && !cancelled() && (failure() || needs.dispatch.outputs.command == 'fallthrough') }}
     runs-on: "ubuntu-latest"
     permissions:
-      contents: "read"
+      contents: "write"
       issues: "write"
       pull-requests: "write"
     steps:
