--- a/packages/network-debugger/package.json
+++ b/packages/network-debugger/package.json
@@ -20,6 +20,8 @@
   },
   "scripts": {
     "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --watch",
     "build": "vite build",
     "dev": "vite build --watch --mode development"
   },
@@ -50,11 +52,14 @@
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
+    "@vitest/coverage-v8": "^4.0.18",
     "envinfo": "^7.14.0",
+    "fast-check": "^4.5.3",
+    "memfs": "^4.56.10",
     "tslib": "2.6.2",
     "vite": "^5.2.10",
     "vite-plugin-dts": "^3.8.3",
-    "vitest": "^2.0.3"
+    "vitest": "^4.0.18"
   },
   "dependencies": {
     "bufferutil": "^4.0.9",
