--- a/packages/network-debugger/package.json
+++ b/packages/network-debugger/package.json
@@ -8,14 +8,14 @@
   "types": "./dist/src/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/src/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/src/index.d.ts"
+      "require": "./dist/index.js"
     },
     "./dev": {
+      "types": "./src/index.ts",
       "import": "./src/index.ts",
-      "require": "./src/index.ts",
-      "types": "./src/index.ts"
+      "require": "./src/index.ts"
     }
   },
   "scripts": {
